2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/relocate.cc (setup_paths): GCC 4.2 fixes: const correctness.

	* lily/text-spanner.cc (print): idem.

	* lily/dynamic-text-spanner.cc (print): only print line if longer
	than dash-period.

	* lily/auto-change-iterator.cc (change_to): formatting.

	* lily/beam.cc (get_default_dir): take extreme note head as input
	for stem direction.

	* lily/tie.cc (get_default_dir): only look directions for visible
	stems. 

	* lily/side-position-interface.cc (aligned_side): oops. Don't
	mutiply with direction. This fixes quantized (staccato, tenuto)
	scripts below notes.

	* lily/lyric-hyphen.cc (set_spacing_rods): oops. Multiply with
	direction. Fixes c-lyrics-center-align.ly

2006-02-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh[!HAVE_STL_DATA_METHOD]: Add copy
	constructor.

	* lily/std-string.cc:
	* lily/include/std-vector.hh (split_string): Move and rename from
	lily/include/misc.hh, lily/misc.cc.  Update callers.

2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/pango-font.hh: HAVE_PANGO_FT2 iso. HAVE_PANGO_16

2006-02-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/test-file.cc: New file.

	* stepmake/stepmake/test-vars.make (TEST_MODULE_LIBES): Fixes for
	libraries.

	* flower/GNUmakefile (TEST_MODULE_LIBS): Link to flower lib.

2006-02-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/file-storage.hh: remove file.

	* lily/include/midi-item.hh (class Midi_track): idem.

	* lily/include/source.hh (class Sources): idem.

	* lily/include/performance.hh (class Performance): use vector
	iso. Cons<>

	* flower/include/cons.hh (class Cons): remove file.

	* flower/include/flower-proto.hh: remove template cruft.

	* lily/include/font-metric.hh: use size_t not vsize for indices.

	* flower/include/flower-proto.hh (Module): remove std-vector.hh
	from proto.

	* lily/include/all-font-metrics.hh: use HAVE_PANGO_FT2

	* lily/include/paper-book.hh (class Paper_book):