@@ -1,5 +1,7 @@
 2006-02-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tie-column-format.cc (Module): remove.
+
 	* lily/relocate.cc (setup_paths): GCC 4.2 fixes: const correctness.
 
 	* lily/text-spanner.cc (print): idem.
